themes/bish/sass/css/style.scss
@use 'post';
@use 'font';
@use 'verification';
@use 'about';

$max-layout-width: 864px;

:root {
  --font-size: 1rem;
  --line-height: 1.54em;
  --radius: 0;
}


*,
*::before,
*::after {
    box-sizing: inherit;
}

.hidden {
  display: none;
}

body {
  --background-color: white;
  --text-color: black;
  --accent-color: palevioletred;
  --light-accent-color: rgb(247, 213, 224);
  --visited-accent-color: indianred;
}

body[theme="grass"] {
  background-image: url("/minecraft-grass.jpg"), url("/minecraft-dirt.jpg");
  background-repeat: repeat-x, repeat;
}

body[theme="dirt"] {
  background-image: url("/minecraft-dirt.jpg");
  background-repeat: repeat;
}

body[theme="snow"] {
  background-image: url("/minecraft-snow.jpg"), url("/minecraft-dirt.jpg");
  background-repeat: repeat-x, repeat;
}

body[theme="nether"] {
  background-image: url("/minecraft-netherrack.jpg");
  background-repeat: repeat;
  --background-color: rgb(68, 18, 18);
  --text-color: oldlace;
  --accent-color: palevioletred;
  --light-accent-color: rgb(247, 213, 224);
  --visited-accent-color: indianred;
  font-palette: --dark-mode;
  
  .rff-webring img {
    filter: invert(1);
  }

  .flaming, footer, main {
    position: relative;
  }
  
  .flaming::before, footer::before, main::before {
    content: '';
    display: block;
    position: absolute;
    inset: 0;
    pointer-events: none;
  
    background-image: url("/fire.gif"),;
    background-position-y: 100%;
    background-repeat: no-repeat; 
    background-size: 100% 100%;
    image-rendering: pixelated;
    opacity: 20%;
  }
}

body[theme="sculk"] {
  background-image: url("/minecraft-sculk.jpg");
  background-repeat: repeat;
  --background-color: rgb(40, 41, 46);
  --text-color: azure;
  --accent-color: teal;
  --light-accent-color: rgb(2, 41, 41);
  --visited-accent-color: darkcyan;
  font-palette: --dark-mode;


  strong {
    font-palette: --dark-mode-strong;
  }

  .rff-webring img {
    filter: invert(1);
  }
}

strong {
  font-palette: --strong;
}

body {
  @include font.ibm-plex-serif-regular;
  color: var(--text-color);

  &.layout-left,
  &.layout-center,
  &.layout-full-width {
      display: flex;
      flex-direction: column;
      padding: 30px;
      max-width: $max-layout-width;
      border-right: 1px solid color-mix(in srgb, var(--accent-color) 10%, transparent);

  }

  &.layout-center,
  &.layout-full-width {
      border: none;
      margin: 0 auto;
  }

  &.layout-full-width {
      max-width: 100%;
  }
}

h1, h2, h3, h4, h5, h6 {
  @include font.henny-penny-regular;
}

code {
  @include font.coral-pixels-regular;
}

main {
  overflow-wrap: break-word;
  font-size: var(--font-size);

}

h1 {
  font-size: calc(var(--font-size) * 3);
  letter-spacing: 0;
}

h2 {
  font-size: calc(var(--font-size) * 2.4);
  letter-spacing: 0;
}

h3 {
  font-size: calc(var(--font-size) * 1.8);
  letter-spacing: 0;
}

h4,
h5,
h6 {
    font-size: calc(var(--font-size) * 1);
    letter-spacing: 0;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
ul,
ol,
img,
figure,
video,
table {
  margin: 25px 0;
}

p, ul, ol {
  line-height: var(--line-height);
}


img {
  max-width: 100%;
}

a {
  color: var(--accent-color);
}

a:visited {
  color: var(--visited-accent-color);
}

.nav {
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  flex-wrap: wrap;
  a {
    text-decoration: none;
    overflow-wrap: break-word;
  }

  h1 {
    @include font.henny-penny-regular;
    font-size: calc(var(--font-size) * 4);
    margin: 0;
    margin-right: 10px;
    flex-basis: 15%;
    

    a {
      color: var(--text-color);
    }
  }

  .logo {
    @include font.coral-pixels-regular;
    padding: 0;

    display: flex;
    flex-direction:column;
    flex-basis: 25%;
    flex-wrap: wrap-reverse;
    margin-left: auto;

    align-items: flex-end;

    img {
      max-width: max-content;
      margin: 0;
      width: 200px;
    }

    a {
      padding-bottom: 0;
    }

    a:hover {
      filter: none;
    }

    img:hover {
      transform: rotateY(180deg);
    }
  }
}


.links {
  display: flex;
  align-self: flex-end;
  justify-content: flex-end;
  flex-grow: 1;

  .link {
    @include font.coral-pixels-regular;
    font-size: calc(var(--font-size) * 1.5);
    align-self: flex-end;
    padding: 15px;
    padding-bottom: calc((sibling-count() - sibling-index() + 1) * 50px);
    flex-basis: 80px;
    min-width: 80px;
  }

  a:hover {
    filter: invert(0.8) hue-rotate(180deg);
  }
}

body > header {
  background: var(--background-color);
  box-shadow: 0 0 20px 20px var(--background-color);
  padding: 10px;
}
body > main {
  background: var(--background-color);
  box-shadow: 0 0 20px 20px var(--background-color);
  padding: 10px;
}

body > footer {
  background: var(--background-color);
  box-shadow: 0 20px 20px 20px var(--background-color);
  padding: 10px;
}

footer {
  display: flex;
  flex-direction: column;
  align-items: center;

  a {
    text-decoration: none;
  }

  h3 {
    margin-bottom: 0;
  }

  img {
    image-rendering: pixelated;
    margin: 0;
  }
}

footer .rff-webring {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;

  a {
    @include font.coral-pixels-regular;
    font-size: 20px;
    text-decoration: none;
    filter: blur(0.3px);
  }

  a:hover {
    filter: invert(0.8) hue-rotate(180deg) blur(0.3px);
  }

  a img {
    margin: 0px 10px;
  }

  a:first-child {
    transform: scaleX(-1);
  }
}

.theme-selector {
  display: flex;
  flex-direction: row;
  justify-content:space-around;

  button {
    margin: 5px;
    padding: 0;
    border: 0;
    background: none;
  }

  button:hover {
    cursor: pointer;
  }

  img {
    margin: 0px;
    height: 40px;
    border-radius: 0;
    border: var(--text-color) 1px solid;
    background-image: url("/minecraft-grass.jpg")
  }

}

